[gd_scene load_steps=7 format=2]

[ext_resource path="res://recursos/RecursosPresentacion/Revamped.otf" type="DynamicFontData" id=1]
[ext_resource path="res://recursos/Kenney Font/Fonts/Kenney Future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://juego/menus/MenuInicio.gd" type="Script" id=3]
[ext_resource path="res://recursos/audio/sfx/select_2.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[node name="MenuInicio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
menu_ajustes = "res://juego/menus/MenuAjustes.tscn"
nivel_inicial = "res://juego/niveles/NivelTest.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Titulo" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -162.0
margin_top = 61.0
margin_right = 153.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
text = "GODOTIN"

[node name="ContenedorPrincipal" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -112.0
margin_right = 128.0
margin_bottom = 112.0

[node name="BotonCargar" type="Button" parent="ContenedorPrincipal"]
margin_right = 256.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "CARGAR"

[node name="BotonNuevo" type="Button" parent="ContenedorPrincipal"]
margin_top = 55.0
margin_right = 256.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 2 )
text = "NUEVO"

[node name="BotonOpciones" type="Button" parent="ContenedorPrincipal"]
margin_top = 110.0
margin_right = 256.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 2 )
text = "OPCIONES"

[node name="HSeparator" type="HSeparator" parent="ContenedorPrincipal"]
margin_top = 165.0
margin_right = 256.0
margin_bottom = 169.0

[node name="BotonSalir" type="Button" parent="ContenedorPrincipal"]
margin_top = 173.0
margin_right = 256.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 2 )
text = "SALIR"

[node name="BotonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="ContenedorPrincipal/BotonNuevo" to="." method="_on_BotonNuevo_pressed"]
[connection signal="pressed" from="ContenedorPrincipal/BotonOpciones" to="." method="_on_BotonOpciones_pressed"]
[connection signal="pressed" from="ContenedorPrincipal/BotonSalir" to="." method="_on_BotonSalir_pressed"]
